--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Run the default task
       run: |
         bundle exec rake
-        rubocop --parallel
+        bundle exec rubocop --parallel
